--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile files('libs/achartengine-1.2.0.jar')
+    compile files('libs/picasso-2.5.2.jar')
 }
